# NeverC

./: .gitignore  README.ar.md  README.de.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.ko.md  README.md  README.ru.md  README.zh-CN.md  README.zh-TW.md  SECURITY.md  format.sh  hello.c
llvm/: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.TXT
llvm/cmake/: config-ix.cmake  config.guess
llvm/cmake/modules/: AddLLVM.cmake  CMakeLists.txt  GetHostTriple.cmake  HandleLLVMOptions.cmake  LLVM-Build.cmake  LLVM-Config.cmake  LLVMConfig.cmake.in  LLVMExternalProjectUtils.cmake
llvm/include/: module.extern.modulemap  module.install.modulemap  module.modulemap
llvm/include/llvm/: CMakeLists.txt  InitializePasses.h  Pass.h
llvm/lib/: CMakeLists.txt
llvm/lib/Analysis/: AliasAnalysis.cpp  AliasSetTracker.cpp  AssumeBundleQueries.cpp  AssumptionCache.cpp  BasicAliasAnalysis.cpp  BlockFrequencyInfo.cpp  BlockFrequencyInfoImpl.cpp  BranchProbabilityInfo.cpp  CFG.cpp  CGSCCPassManager.cpp  CMakeLists.txt  CallGraph.cpp  CallGraphSCCPass.cpp  CaptureTracking.cpp  CmpInstAnalysis.cpp  ConstantFolding.cpp  ConstraintSystem.cpp  DemandedBits.cpp  DominanceFrontier.cpp  GlobalsModRef.cpp  IVDescriptors.cpp  IVUsers.cpp  InlineAdvisor.cpp  InlineCost.cpp  InstructionPrecedenceTracking.cpp  InstructionSimplify.cpp  LastRunTrackingAnalysis.cpp  LazyCallGraph.cpp  LazyValueInfo.cpp  Loads.cpp  LoopAccessAnalysis.cpp  LoopNestAnalysis.cpp  LoopPass.cpp  MemoryBuiltins.cpp  MemoryDependenceAnalysis.cpp  MemoryLocation.cpp  MemorySSA.cpp  MemorySSAUpdater.cpp  ModuleSummaryAnalysis.cpp  MustExecute.cpp  (+12 more)
llvm/lib/BinaryFormat/: CMakeLists.txt  COFF.cpp  Dwarf.cpp  MachO.cpp  Magic.cpp
llvm/lib/CSupport/: APFloat.c  APInt.c  BranchProbability.c  BuryPointer.c  CMakeLists.txt  CRC.c  CachePruning.c  Chrono.c  CommandLine.c  Compression.c  ConvertUTF.c  ConvertUTFWrapper.c  DJB.c  DynamicLibrary.c  Errno.c  FloatingPointMode.c  FoldingSet.c  FormattedStream.c  GlobPattern.c  GraphWriter.c  IntEqClasses.c  JSON.c  LEB128.c  LineIterator.c  LockFileManager.c  MD5.c  MemAlloc.c  Memory.c  NativeFormatting.c  Path.c  Process.c  Program.c  RWMutex.c  RandomNumberGenerator.c  Regex.c  SHA1.c  SHA256.c  ScaledNumber.c  Signals.c  SmallPtrSet.c  (+19 more)
llvm/lib/CSupportHost/: COM.cpp  SignalsSymbolize.inc  SmallVectorInst.cpp  support_cpp.cpp
llvm/lib/CodeGen/: AggressiveAntiDepBreaker.cpp  AggressiveAntiDepBreaker.h  Analysis.cpp  AssignmentTrackingAnalysis.cpp  AtomicExpandPass.cpp  BasicBlockSections.cpp  BranchFolding.cpp  BranchFolding.h  BranchRelaxation.cpp  BreakFalseDeps.cpp  CFIFixup.cpp  CFIInstrInserter.cpp  CMakeLists.txt  CalcSpillWeights.cpp  CallingConvLower.cpp  CodeGen.cpp  CodeGenCommonISel.cpp  CodeGenPrepare.cpp  CommandFlags.cpp  CriticalAntiDepBreaker.cpp  DeadMachineInstructionElim.cpp  DetectDeadLanes.cpp  DwarfEHPrepare.cpp  EarlyIfConversion.cpp  EdgeBundles.cpp  ExpandLargeDivRem.cpp  ExpandLargeFpConvert.cpp  ExpandMemCmp.cpp  ExpandPostRAPseudos.cpp  ExpandReductions.cpp  FEntryInserter.cpp  FinalizeISel.cpp  GlobalMerge.cpp  IfConversion.cpp  InlineSpiller.cpp  InterferenceCache.cpp  InterleavedAccessPass.cpp  JMCInstrumenter.cpp  LLVMTargetMachine.cpp  LazyMachineBlockFrequencyInfo.cpp  (+101 more)
llvm/lib/DebugInfo/: CMakeLists.txt
llvm/lib/IR/: AsmWriter.cpp  Assumptions.cpp  AttributeImpl.h  Attributes.cpp  AutoUpgrade.cpp  BasicBlock.cpp  CMakeLists.txt  Comdat.cpp  ConstantFold.cpp  ConstantRange.cpp  Constants.cpp  ConstantsContext.h  ConvergenceVerifier.cpp  DIBuilder.cpp  DataLayout.cpp  DebugInfo.cpp  DebugInfoMetadata.cpp  DebugProgramInstruction.cpp  DiagnosticHandler.cpp  DiagnosticInfo.cpp  DiagnosticPrinter.cpp  Dominators.cpp  EHPersonalities.cpp  Function.cpp  GCStrategy.cpp  Globals.cpp  IRBuilder.cpp  IRPrintingPasses.cpp  InlineAsm.cpp  Instruction.cpp  Instructions.cpp  IntrinsicInst.cpp  LLVMContext.cpp  LLVMContextImpl.cpp  LLVMContextImpl.h  LLVMRemarkStreamer.cpp  LegacyPassManager.cpp  MDBuilder.cpp  Mangler.cpp  Metadata.cpp  (+15 more)
llvm/lib/IRReader/: CMakeLists.txt  IRReader.cpp
llvm/lib/LTO/: CMakeLists.txt  LTO.cpp  LTOBackend.cpp
llvm/lib/Linker/: IRMover.cpp  LinkModules.cpp
llvm/lib/MC/: CMakeLists.txt  ELFObjectWriter.cpp  MCAsmBackend.cpp  MCAsmInfo.cpp  MCAsmInfoDarwin.cpp  MCAsmMacro.cpp  MCAsmStreamer.cpp  MCAssembler.cpp  MCContext.cpp  MCDwarf.cpp  MCELFObjectTargetWriter.cpp  MCELFStreamer.cpp  MCExpr.cpp  MCFragment.cpp  MCInst.cpp  MCInstPrinter.cpp  MCMachOStreamer.cpp  MCMachObjectTargetWriter.cpp  MCNullStreamer.cpp  MCObjectFileInfo.cpp  MCObjectStreamer.cpp  MCPseudoProbe.cpp  MCRegisterInfo.cpp  MCSchedule.cpp  MCSection.cpp  MCSectionCOFF.cpp  MCSectionELF.cpp  MCSectionMachO.cpp  MCStreamer.cpp  MCSubtargetInfo.cpp  MCSymbol.cpp  MCSymbolELF.cpp  MCTargetOptions.cpp  MCTargetOptionsCommandFlags.cpp  MCWin64EH.cpp  MCWinCOFFStreamer.cpp  MachObjectWriter.cpp  StringTableBuilder.cpp  TargetRegistry.cpp  WinCOFFObjectWriter.cpp
llvm/lib/Object/: Archive.cpp  ArchiveWriter.cpp  Binary.cpp  CMakeLists.txt  COFFImportFile.cpp  COFFModuleDefinition.cpp  COFFObjectFile.cpp  ELF.cpp  ELFObjectFile.cpp  Error.cpp  IRObjectFile.cpp  IRSymtab.cpp  MachOObjectFile.cpp  MachOUniversal.cpp  ModuleSymbolTable.cpp  ObjectFile.cpp  RecordStreamer.h  RelocationResolver.cpp  SymbolicFile.cpp  TapiFile.cpp  WindowsMachineFlag.cpp  WindowsResource.cpp
llvm/lib/Option/: Arg.cpp  (+3 more)
neverc/: CMakeLists.txt  main.cpp
neverc/include/: CMakeLists.txt
neverc/lib/: CMakeLists.txt
pluginsdk/: CMakeLists.txt
pluginsdk/examples/: BenchPlugin.c  CMakeLists.txt  CrtShimPlugin.c  ExamplePlugin.c  Makefile
runtime/: CMakeLists.txt
tests/: CMakeLists.txt
tests/neverc/: BasicTests.cpp  BenchmarkTests.cpp  CMakeLists.txt  ConformanceTests.cpp  DebugTests.cpp  DriverTests.cpp  HostTests.cpp  LTOTests.cpp  LinkerTests.cpp  MimallocTests.cpp  NeverCTestFixture.cpp  NeverCTestFixture.h  OverrideTests.cpp  ShellcodeCrossTargetTests.cpp  ShellcodeStressTests.cpp  ShellcodeTests.cpp  advanced_flags_rejected.c  test_basic.c  test_preprocessor.c
(+4830 files in other folders)
